# forge-p2p

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  forge-state.toml  library-feedback.md  plan.toml  registry.toml  swarm-nl-reference.md  workflow.md
.forge/: registry.toml  swarm-nl-reference.md  workflow.md
apps/echo-gossip/: Cargo.toml  README.md  decisions.md  forge-state.toml  plan.toml
apps/echo-gossip/src/: main.rs
apps/echo-gossip/tests/: integration.rs
apps/mesh-chat/: Cargo.toml  README.md  decisions.md  forge-state.toml  plan.toml
apps/mesh-chat/src/: chat.rs  main.rs
apps/mesh-chat/static/: chat.css  chat.js  dual.html  index.html
apps/mesh-chat/tests/: integration.rs
apps/paired-exchange/: Cargo.toml  README.md  bootstrap_config.ini  decisions.md  forge-state.toml  plan.toml
apps/paired-exchange/src/: config.rs  datagate.rs  handshake.rs  lib.rs  main.rs  pairing.rs  persistence.rs  wire.rs
apps/paired-exchange/static/: app.css  app.js  index.html
apps/paired-exchange/tests/: datagate.rs  handshake.rs  persistence.rs
apps/sovereign-notes/: .gitignore  Cargo.toml  README.md  decisions.md  forge-state.toml  plan.toml
apps/sovereign-notes/src/: main.rs  net.rs  rpc.rs  store.rs
apps/sovereign-notes/static/: app.css  app.js  index.html
apps/sovereign-notes/tests/: integration.rs
apps/unleash/: .gitignore  Cargo.toml  KNOWN_ISSUES.md  README.md  decisions.md  forge-state.toml  plan.toml
apps/unleash/scenarios/disaster_relief/: environment.yaml  mission.yaml
apps/unleash/src/: config.rs  control.rs  keyspace.rs  link_model.rs  main.rs  swarm_node.rs
apps/unleash/src/coord/: cbba.rs  mod.rs  slam.rs  stigmergy.rs  wmsr.rs
apps/unleash/src/observer/: mod.rs  panels.rs
apps/unleash/src/robot/: kinematics.rs  mod.rs  sensors.rs
apps/unleash/src/runner/: mod.rs  report.rs  scenario.rs  supervisor.rs
apps/unleash/static/: index.html  style.css
apps/unleash/static/panels/: banner.js  bootstrap.js  classes.js  consensus.js  glossary.js  inspector.js  legend.js  map.js  mesh.js  mission.js  narration.js  onboarding.js  replication.js  state.js  task.js
shared/forge-ui/: Cargo.toml  README.md
shared/forge-ui/src/: discovery.rs  events.rs  lib.rs  server.rs  state.rs  ws.rs
shared/forge-ui/static/: index.html  mesh.js  peers.js  style.css
shared/forge-ui/tests/: integration.rs
