[package]
name = "mesh-chat"
version = "0.1.0"
edition = "2021"
description = "Two-peer gossip chat demo for ForgeP2P"

[dependencies]
swarm-nl = { version = "0.2.1", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
forge-ui = { path = "../../shared/forge-ui" }
