[package]
name = "sovereign-notes"
version = "0.1.0"
edition = "2021"
description = "CLI note-taking tool that syncs notes across devices peer-to-peer"

[dependencies]
swarm-nl = { version = "0.2.1", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
