[package]
name = "unleash"
version = "0.1.0"
edition = "2021"
description = "Heterogeneous robot swarm coordination demo for disaster relief (SwarmNL-native)"

[dependencies]
swarm-nl = { version = "0.2.1", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
forge-ui = { path = "../../shared/forge-ui" }
axum = { version = "0.7", features = ["ws"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
