[package]
name = "forge-ui"
version = "0.2.0"
edition = "2021"
description = "Embedded web UI, mesh visualizer, and peer discovery for ForgeP2P apps"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
mdns-sd = "0.11"
if-addrs = "0.13"

[dev-dependencies]
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
